--- a/app/views/meals/new.erb
+++ b/app/views/meals/new.erb
@@ -1,13 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Lucub</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="/css/select2-bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="//cdnjs.cloudflare.com/ajax/libs/select2/4.0.1/css/select2.min.css" rel="stylesheet" />
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/select2/4.0.1/js/select2.min.js"></script>
+    <script type="text/javascript">
+      $('select').select2();
+    </script>
+    <script>
+      $(document).ready(function() {
+        $('#states').select2({});
+      });
+    </script>
     <style>
       body {
         padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+      }
+      select {
+        width: 100%
       }
     </style>
   </head>
@@ -15,29 +30,39 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
+          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+          </button>
           <a class="brand" href="/">Lucub</a>
+          <div class="nav-collapse collapse">
+            <ul class="nav">
+              <li><a href="/logout">Log Out</a></li>
+            </ul>
+          </div><!--/.nav-collapse -->
         </div>
       </div>
     </div>
+
     <div class="container">
       <div class="row">
-        <div class="span3">
-          <form action="/login" method="POST">
-            <fieldset>
-              <legend>Welcome</legend>
-              <label>Email</label>
-              <input type="text" name="email">
-              <label>Password</label>
-              <input type="password" name="password"><br>
-              <input type="submit" class="btn btn-primary" value="Log In">
-              <input type="button" class="btn" value="Sign Up" onclick="location.href='/signup'">
-              </form>
+        <div class="span12">
+          <form action="">
+          <fieldset>
+            <legend>Plan a New Meal</legend>
+            <label>Date</label>
+            <input type="date">
+            <label>Time</label>
+            <input type="time" step=900>
+            <label>What kind of food are you in the mood for?</label>
+            <select class="form-control" name="states" id="states" multiple="multiple">
+              <% @categories.each do |category| %>
+                <option value="<%= category.title%>"><%= category.title %></option>
+              <% end %>
+            </select>
             </fieldset>
           </form>
         </div>
       </div>
     </div>
-    <script src="http://code.jquery.com/jquery.js"></script>
-    <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
