--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -9,6 +9,9 @@
       body {
         padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
       }
+      .test {
+        margin-bottom: 0px;
+      }
     </style>
   </head>
   <body>
@@ -50,23 +53,42 @@
                 <th>Location</th>
                 <th>Restaurant</th>
                 <th>Guests</th>
-                <th>Vote</th>
-                <th>Edit</th>
-                <th>Cancel</th>
+                <th></th>
+                <th></th>
+                <th></th>
               </tr>
             </thead>
             <tbody>
               <% @meals.each do |meal| %>
+              <a>
                 <tr>
-                  <tr><%= meal.name %></tr>
-                  <tr><%= meal.date %></tr>
-                  <tr><%= meal.time %></tr>
-                  <tr><%= meal.location %></tr>
-                  <tr><%= meal.restaurant %></tr>
-                  <tr><%= meal.users %></tr>
-                  <tr></tr>
-                  <tr></tr>
-                  <tr></tr>
+                  <td><%= meal.name %></td>
+                  <td><%= meal.date.strftime("%B %e") %></td>
+                  <td><%= meal.time.strftime("%I:%M %p") %></td>
+                  <td><%= meal.location %></td>
+                  <td>
+                    <% if meal.restaurant.nil? && @user.id == meal.host.id %>
+                      <input type="button" class="btn btn-primary" value="Choose" onclick="location.href='/meals/<%= meal.id %>/restaurants/1'">
+                    <% else %>
+                      <%= meal.restaurant.name if meal.restaurant %>             
+                    <% end %>
+                  </td>
+                  <td><%= meal.users.map{|user| user.first_name}.join(", ") %></td>
+                  <td>
+                    <input type="button" class="btn" value="View" onclick="location.href='/meals/<%= meal.id %>'">     
+                  </td>
+                  <td>
+                    <% if @user.id == meal.host.id %>
+                      <input type="button" class="btn btn-warning" value="Edit" onclick="location.href='/meals/<%= meal.id %>/edit'">                  
+                    <% else %>
+                      <input type="button" class="btn btn-primary" value="Vote" onclick="location.href='/meals/<%= meal.id %>/votes/new'">              
+                    <% end %>                   
+                  </td>
+                  <td>
+                    <form class="test" action="/meals/<%= meal.id %>/delete" method="POST">
+                      <input type="submit" class="btn btn-danger" value="<%= (@user.id == meal.host.id)? 'Cancel' : 'Decline' %>">
+                    </form>
+                  </td>
                 </tr>
               <% end %>
             </tbody>
